#106: do not write events to session recording file until RECORDING_START event is received